--- a/todo.org
+++ b/todo.org
@@ -1,5 +1,5 @@
-* TODO Implement "you found the lock, now find the key feature"
-The key shall be stored as a cookie and if not such cookie is found on the machine the "you found the lock" screen is showed regardless of route.
+* DONE Implement key prompt
+The key shall be stored as a cookie and if no such cookie is found on the machine the "you found the lock" screen is showed regardless of route.
 
 The key must be supplied to interact with the API.
 * TODO Implement post viewing
