Check "Setup ESLint"

--- a/todo.org
+++ b/todo.org
@@ -4,7 +4,7 @@
   The key must be supplied to interact with the API.
 - [X] Add Cypress tests
 - [X] Add example .env files
-- [ ] Setup linting
+- [X] Setup ESLint
 - [ ] Implement post viewing
 - [ ] Implement post creating
 - [ ] Implement React routing
